cmake_minimum_required(VERSION 3.15)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

add_compile_options(-pedantic)
add_executable(untitled main.cpp boj/1000/main.cpp boj/1008/main.cpp boj/1330/main.cpp boj/1463/main.cpp boj/1676/main.cpp boj/1929/main.cpp boj/1978/main.cpp boj/2193/main.cpp boj/2225/main.cpp boj/2558/main.cpp boj/2884/main.cpp boj/6588/main.cpp boj/9095/main.cpp boj/10171/main.cpp boj/10430/main.cpp boj/10718/main.cpp boj/10828/main.cpp boj/10844/main.cpp boj/10950/main.cpp boj/10951/main.cpp boj/10952/main.cpp boj/10953/main.cpp boj/11052/main.cpp boj/11053/main.cpp boj/11726/main.cpp boj/11727/main.cpp boj/14002/main.cpp boj/15990/main.cpp boj/16194/main.cpp boj/1912/main.cpp boj/2609/main.cpp)
